// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 61,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.815,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 140,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 49,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 280,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.555,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 17,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.535,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 37,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 28,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 2.3749999999999996,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evasionPct": 16.8,
  "extraAttackChancePct": 56,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 23,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 112,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.595,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 5,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 10,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 46,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.801,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 0,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 26,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 0,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "a6cd8e20b351dd337785ac94678efcb1eb506387",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "a0d1a238311665bf5c03052f0b03a33e89aababa",
    "outcome": "win",
    "playerHp": 705,
    "playerMp": 227,
    "turns": 23,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "ea281967f9dd0a2f846753661bfc615dda4bafc3",
    "outcome": "win",
    "playerHp": 568,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "61acf81e857fb9fe6097c452f95d9a2d6b8abc54",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "69f3af341c1f3813caa429a535af6cb6d2ec6ed1",
    "outcome": "win",
    "playerHp": 436,
    "playerMp": 501,
    "turns": 55,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "9e18f8168256d82140b0babaee5330c9b480af1c",
    "outcome": "win",
    "playerHp": 152,
    "playerMp": 227,
    "turns": 558,
  },
  {
    "enemyHp": 227,
    "label": "heal_vs_들소_boss",
    "logSha": "d9715d63a163868f7300232d7a4b4151ed6a3745",
    "outcome": "lose",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 251,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "0a78dd0f85d015acaf69177b257de33ad917c374",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "b6cac6e1f9f83776407d1c644b89067ed3dd53cb",
    "outcome": "win",
    "playerHp": 185,
    "playerMp": 92,
    "turns": 26,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "4971827ae375e8d4e5d57d3cf4819337f385003f",
    "outcome": "p1_win",
    "turns": 73,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "b3ec11399829326c4251e1a32b53d7f130abb159",
    "outcome": "p1_win",
    "turns": 41,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "52e8635b32c8913c22c8f8ac152a9cd30d89f7f7",
    "outcome": "p2_win",
    "turns": 204,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "5c3f33af41b1516b9f9f36ac13569e18450d13b8",
    "outcome": "win",
    "playerHp": 708,
    "playerMp": 227,
    "turns": 22,
  },
  {
    "enemyHp": 108,
    "label": "chill_enemy",
    "logSha": "825a977869e7ded44e0ccd89e22794fb5865b494",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 68,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "094ffdf0c3b5c2eca02809e16d11bc7639151e7e",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 140,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "bdbe015f0fa021ad8237d784c5de5470b2907baf",
    "outcome": "win",
    "playerHp": 536,
    "playerMp": 227,
    "turns": 56,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "2e4d45ff062039fd0f17a43da5fa462195447056",
    "outcome": "win",
    "playerHp": 697,
    "playerMp": 227,
    "turns": 25,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "fb12b3f0ac1dfa282e237adf7f8e370a3aeb8f16",
    "outcome": "win",
    "playerHp": 696,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 95,
    "label": "heavyblow_enemy",
    "logSha": "3120874fe2841780e539398730034f845b4f7492",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 472,
  },
]
`;
